--- a/index.html
+++ b/index.html
@@ -1,23 +1,39 @@
 <!doctype html>
 <html lang="de">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <link rel="alternate icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BauRestore Solutions</title>
-    <meta name="description" content="BauRestore Solutions - Professional restoration services" />
-    <meta name="author" content="BauRestore Solutions" />
 
-    <meta property="og:title" content="BauRestore Solutions" />
-    <meta property="og:description" content="BauRestore Solutions - Professional restoration services" />
-    <meta property="og:type" content="website" />
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+  <link rel="alternate icon" type="image/svg+xml" href="/favicon.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>BauRestore Solutions</title>
+  <meta name="description" content="BauRestore Solutions - Professional restoration services" />
+  <meta name="author" content="BauRestore Solutions" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-  </head>
+  <meta property="og:title" content="BauRestore Solutions" />
+  <meta property="og:description" content="BauRestore Solutions - Professional restoration services" />
+  <meta property="og:type" content="website" />
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <meta name="twitter:card" content="summary_large_image" />
+</head>
+
+<body>
+  <div id="root"></div>
+
+  <!-- Hidden form for Netlify detection -->
+  <form name="contact" data-netlify="true" netlify-honeypot="bot-field" hidden>
+    <input type="text" name="name" />
+    <input type="tel" name="phone" />
+    <input type="email" name="email" />
+    <input type="text" name="damage-type" />
+    <textarea name="message"></textarea>
+    <input type="file" name="file-0" />
+    <input type="file" name="file-1" />
+    <input type="file" name="file-2" />
+    <input type="hidden" name="recipient-email" />
+  </form>
+
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
