Update index.html and README.md to reflect new branding and service description in German
- Changed the title and meta tags in index.html to align with the new branding.
- Updated README.md title to match the new service description in German.

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   <link rel="alternate icon" type="image/svg+xml" href="/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>BauRestore Solutions</title>
-  <meta name="description" content="BauRestore Solutions - Professional restoration services" />
-  <meta name="author" content="BauRestore Solutions" />
+  <title>BauRestore - Ingenieurdienstleistungen für Bauschäden und Sanierungsmanagement</title>
+  <meta name="description" content="BauRestore - Ingenieurdienstleistungen für Bauschäden und Sanierungsmanagement" />
+  <meta name="author" content="BauRestore - Ingenieurdienstleistungen für Bauschäden und Sanierungsmanagement" />
 
-  <meta property="og:title" content="BauRestore Solutions" />
-  <meta property="og:description" content="BauRestore Solutions - Professional restoration services" />
+  <meta property="og:title" content="BauRestore - Ingenieurdienstleistungen für Bauschäden und Sanierungsmanagement" />
+  <meta property="og:description" content="BauRestore - Ingenieurdienstleistungen für Bauschäden und Sanierungsmanagement" />
   <meta property="og:type" content="website" />
 
   <meta name="twitter:card" content="summary_large_image" />
