feat: Enable multiple file uploads for Netlify contact form by adding `enctype` and consolidating file inputs.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <meta name="author" content="BauRestore - Ingenieurdienstleistungen für Bauschäden und Sanierungsmanagement" />
 
   <meta property="og:title" content="BauRestore - Ingenieurdienstleistungen für Bauschäden und Sanierungsmanagement" />
-  <meta property="og:description" content="BauRestore - Ingenieurdienstleistungen für Bauschäden und Sanierungsmanagement" />
+  <meta property="og:description"
+    content="BauRestore - Ingenieurdienstleistungen für Bauschäden und Sanierungsmanagement" />
   <meta property="og:type" content="website" />
 
   <meta name="twitter:card" content="summary_large_image" />
@@ -21,15 +22,13 @@
   <div id="root"></div>
 
   <!-- Hidden form for Netlify detection -->
-  <form name="contact" data-netlify="true" netlify-honeypot="bot-field" hidden>
+  <form name="contact" data-netlify="true" netlify-honeypot="bot-field" enctype="multipart/form-data" hidden>
     <input type="text" name="name" />
     <input type="tel" name="phone" />
     <input type="email" name="email" />
     <input type="text" name="damage-type" />
     <textarea name="message"></textarea>
-    <input type="file" name="file-0" />
-    <input type="file" name="file-1" />
-    <input type="file" name="file-2" />
+    <input type="file" name="image-upload" multiple />
     <input type="hidden" name="recipient-email" />
   </form>
 
